discussion/kv_engine/174861/174861_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52080: Add StoredDocKey mem alloc test, add allocator stats to
existing tests

Extend initial MemoryTrackingTests to cover some Allocator stats.

Add StoredDocKey test using MemoryTrackingAllocator to ensure
memory alloc/dealloc is tracked properly.

Change-Id: If11b8fd7f03d74ff90a11b57d6d74ca79aadf833

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-05-25 15:51:04.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-25 16:18:08.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46457/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\storeddockey_test.cc(32): error C2672: "StoredDocKeyT": no matching overloaded function found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46457/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17786/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:40:26: error: no member named "floor" in namespace "std" [clang-diagnostic-error]
    EXPECT_EQ(16 * (std::floor(key2.size() / 16) + 1),
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:63: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:36: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:39: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17786/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:40:26:
error: no member named "floor" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17786/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7399/ : FAILURE

Compile error at [2022-05-25T15:58:22.510Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:40:26:
error: no member named "floor" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7399/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19569/ : FAILURE

Failure of GoogleTest "StoredDocKeyTest.trackedByAllocator":

<pre>
[ RUN      ] StoredDocKeyTest.trackedByAllocator
[2022-05-25T15:57:13.278Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:40: Failure
[2022-05-25T15:57:13.278Z] Expected equality of these values:
[2022-05-25T15:57:13.278Z]   16 * (std::floor(key2.size() / 16) + 1)
[2022-05-25T15:57:13.278Z]     Which is: 64
[2022-05-25T15:57:13.278Z]   allocator.getBytesAllocated()
[2022-05-25T15:57:13.278Z]     Which is: 56
[2022-05-25T15:57:13.278Z] [  FAILED  ] StoredDocKeyTest.trackedByAllocator (0 ms)
StoredDocKeyTest.trackedByAllocator
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19569/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20578/ : FAILURE

Failure of GoogleTest "StoredDocKeyTest.trackedByAllocator":

<pre>
[ RUN      ] StoredDocKeyTest.trackedByAllocator
[2022-05-25T16:13:55.537Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:41: Failure
[2022-05-25T16:13:55.537Z] Expected equality of these values:
[2022-05-25T16:13:55.537Z]   16 * (std::floor(key2.size() / 16) + 1)
[2022-05-25T16:13:55.537Z]     Which is: 64
[2022-05-25T16:13:55.537Z]   allocator.getBytesAllocated()
[2022-05-25T16:13:55.537Z]     Which is: 56
[2022-05-25T16:13:55.537Z] [  FAILED  ] StoredDocKeyTest.trackedByAllocator (0 ms)
StoredDocKeyTest.trackedByAllocator
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20578/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19917/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19917/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27964/ : FAILURE

Failure of GoogleTest "StoredDocKeyTest.trackedByAllocator":

<pre>
[ RUN      ] StoredDocKeyTest.trackedByAllocator
[2022-05-25T16:01:30.316Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:41: Failure
[2022-05-25T16:01:30.316Z] Expected equality of these values:
[2022-05-25T16:01:30.316Z]   16 * (std::floor(key2.size() / 16) + 1)
[2022-05-25T16:01:30.316Z]     Which is: 64
[2022-05-25T16:01:30.316Z]   allocator.getBytesAllocated()
[2022-05-25T16:01:30.316Z]     Which is: 56
[2022-05-25T16:01:30.316Z] [  FAILED  ] StoredDocKeyTest.trackedByAllocator (0 ms)
StoredDocKeyTest.trackedByAllocator
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27964/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7501/ : FAILURE

Failure of GoogleTest "StoredDocKeyTest.trackedByAllocator":

<pre>
[ RUN      ] StoredDocKeyTest.trackedByAllocator
[2022-05-25T16:04:45.561Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:40: Failure
[2022-05-25T16:04:45.561Z] Expected equality of these values:
[2022-05-25T16:04:45.561Z]   16 * (std::floor(key2.size() / 16) + 1)
[2022-05-25T16:04:45.561Z]     Which is: 64
[2022-05-25T16:04:45.561Z]   allocator.getBytesAllocated()
[2022-05-25T16:04:45.561Z]     Which is: 56
[2022-05-25T16:04:45.561Z] [  FAILED  ] StoredDocKeyTest.trackedByAllocator (0 ms)
StoredDocKeyTest.trackedByAllocator
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7501/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16824/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39033/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18764/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
